# BBA-CLI

./: .gitignore  CLAUDE.md  CLI-README.md  README.md  temp-batch-request.json  test-input.json
.github/workflows/: build.yml  docs-pdf.yml  sync-upstream.yml
ab-test-output/: mac-output.pbn
bba-cli/: Cargo.toml  build.rs
bba-cli-cs/: Program.cs  bba-cli-cs.csproj
bba-cli/.cargo/: config.toml
bba-cli/src/: batch.rs
bba-cli/tests/: cli_smoke.rs
bba-server/: Cargo.toml  Program.cs  README.md  appsettings.json  bba-server.csproj  build.rs  restart-server.py  start-hidden.vbs  start-server.py
bba-server-rs/src/: main.rs  models.rs
bba-server-rs/src/routes/: admin.rs  api.rs  mod.rs
bba-server-rs/src/services/: audit_log.rs  ip_anonymizer.rs  mod.rs
bba-server-rs/wwwroot/: dashboard.html
bba-server/Models/: AuctionModels.cs
bba-server/Services/: AdminService.cs  AuditLogService.cs  ConventionService.cs  EPBotService.cs  IpAnonymizer.cs
bba-server/src/: config.rs
bba-server/src/routes/: api.rs
bba-server/src/services/: audit_log.rs  convention_service.rs
bba-server/wwwroot/: dashboard.html
cli/: Cargo.toml  build.rs
cli-mac/: Cargo.toml  ab_test.py  build.rs
cli-mac/src/: batch.rs  engine.rs  ffi.rs  main.rs
cli/src/: batch.rs  error.rs  lib.rs  main.rs
cli/src/batch/: mod.rs  processor.rs
cli/src/epbot/: engine.rs  mod.rs
cli/src/ffi/: bindings.rs  mod.rs
conventions/: 21GF.bbsa  Sayc.bbsa
epbot-core/: Cargo.toml  build.rs
epbot-core/examples/: sd_probe.rs
epbot-core/src/: bba_hash.rs  ffi.rs  lib.rs  score.rs
epbot-core/tests/: integration.rs
epbot-libs/macos/arm64/: libEPBot.dylib
epbot-wrapper/: Program.cs  README.md  epbot-wrapper.csproj
epbot-wrapper/EdwardTest/: Program.vb
integration-tests/: 1N-8734-output.json  1N-new-output.json  1N-new-output.pbn  1N-output.pbn  1N-precision-output.json  1N-response-fixed.json  1N-wrapper-output.pbn  1m-1N-request.json  1m-1N-response-fixed.json  1m-1N-response.json  All_Pass-request-21gf.json  All_Pass-request.json  All_Pass-response-21gf-2.json  All_Pass-response.json  auction-differences.md  batch-request-precision.json  batch-request.json  batch-response-new.json  batch-response.json  batch-stderr.txt  compare_auctions.py  json_to_pbn.py  test-3boards.json  test-deal2-21gf.json  test-deal2-precision.json  test-first-diff.json  test-perm.json  test-precision.json  test-rotation.json  test-single.json  test-strong-21gf.json  test-strong.json
legacy/bba-cli-cs/: Program.cs  bba-cli-cs.csproj
legacy/bba-server-cs/: README.md  appsettings.Development.json  restart-server.py  setup-cloudflare.py  start-server.py  test-scenario.py
legacy/bba-server-cs/Services/: AuditLogService.cs  ConventionService.cs  FileLoggerService.cs
legacy/epbot-wrapper/: Program.cs  README.md
legacy/epbot-wrapper/EdwardTest/: EdwardTest.vbproj  ModuleBBA.vb  ModuleBidding.vb
legacy/integration-tests/: test_python_wrapper.py
legacy/scripts/: build-windows.sh  setup-windows-vm.sh
scripts/: setup-windows-vm.sh
test/: sample-output.pbn  sample.pbn
tests/fixtures/: deals.pbn
tests/fixtures/expected/: deals-with-sd.pbn
tests/fixtures/expected/slow/: 1N.pbn  Fourth_Suit_Forcing.pbn
wrapper/: CMakeLists.txt
wrapper/include/: epbot_ffi.h
wrapper/src/: epbot_wrapper.cpp
