[package]
name = "bba-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rick Wilson"]
description = "Bridge Bidding Analyzer CLI - generates auctions for PBN files using EPBot engine"
license = "MIT"
repository = "https://github.com/Rick-Wilson/BBA-CLI"
keywords = ["bridge", "bidding", "pbn", "card-game"]
categories = ["command-line-utilities", "games"]

[dependencies]
# Bridge types and PBN handling from DEALER3
dealer-core = { path = "../../dealer3/dealer-core" }
dealer-pbn = { path = "../../dealer3/dealer-pbn" }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# JSON for C# wrapper communication
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Future: parallel processing
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "bba-cli"
path = "src/main.rs"
